# nitrokey-3-firmware

./: .gitignore  .gitlab-ci.yml  70-lpc55.rules  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-fedora  Makefile  README.md  docker-Makefile  nk3-quickstart.md  repometrics.toml  rust-toolchain.toml  se050-test.sh
components/apps/: Cargo.toml
components/apps/src/: dispatch.rs  lib.rs  migrations.rs
components/array-tuple-concat/: .gitignore  Cargo.toml  Makefile  README.md
components/array-tuple-concat/.github/workflows/: ci.yml
components/array-tuple-concat/src/: lib.rs
components/array-tuple-concat/tests/: const_macro.rs
components/boards/: Cargo.toml
components/boards/src/: flash.rs  init.rs  lib.rs  measurement.rs  nk3am.rs  nk3xn.rs  nkpk.rs  runtime.rs  soc.rs  store.rs  ui.rs
components/boards/src/nk3am/: ui.rs
components/boards/src/nk3xn/: button.rs  led.rs  nfc.rs  prince.rs  spi.rs
components/boards/src/soc/: lpc55.rs  nrf52.rs
components/boards/src/soc/lpc55/: boot_timer.rs  clock_controller.rs  monotonic.rs
components/boards/src/soc/nrf52/: flash.rs
components/boards/src/ui/: buttons.rs  rgb_led.rs
components/fm11nt08c/: Cargo.toml
components/fm11nt08c/src/: crc8.rs  i2cimpl.rs  lib.rs  registers.rs
components/lfs-backup/: Cargo.toml
components/lfs-backup/src/: lfs_backup.rs  lib.rs  tests.rs
components/ndef-app/: Cargo.toml
components/ndef-app/src/: lib.rs  ndef.rs
components/nfc-device/: Cargo.toml
components/nfc-device/src/: either.rs  iso14443.rs  lib.rs  traits.rs
components/nt3h2111/: Cargo.toml  blocks.toml
components/nt3h2111/src/: blocks_1k.rs  lib.rs  registers.rs
components/ntp53/: Cargo.toml
components/ntp53/src/: blocks.rs  lib.rs  registers.rs
components/provisioner-app/: Cargo.toml
components/provisioner-app/src/: apdu.rs  ctaphid.rs  lib.rs
components/se050/: .gitignore  Cargo.toml  build.rs  conv.py
components/se050-backend-random/: Cargo.toml
components/se050-backend-random/src/: lib.rs
components/se050/src/: lib.rs  se050.rs  se050_convs.rs  t1.rs  types.rs  types_convs.rs
components/stm32n657-hal/: Cargo.toml
components/stm32n657-hal/src/: bsec.rs  gpio.rs  lib.rs  otg.rs  otg_fs.rs  otp.rs  rcc.rs  timer.rs
components/usbd-ctaphid.hidden/: Cargo.toml
components/usbd-ctaphid.hidden/src/: authenticator.rs  class.rs  constants.rs  ctap1.rs  insecure.rs  lib.rs  pipe.rs  types.rs
components/usbd-ctaphid.hidden/src/types/: de.rs
components/usbd-ctaphid.hidden/src/types/ctap2/: client_pin.rs
components/utils/: Cargo.toml  build.rs
components/utils/src/: build.rs  constants.rs  lib.rs  storage.rs  version.rs
runners/embedded/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  create_cfg.sh  fidokeys_lfs_d8000+14000.ihex
runners/embedded/.cargo/: config.toml
runners/embedded/app-nrf/: Cargo.toml
runners/embedded/app-nrf/src/: main.rs
runners/embedded/data/: prepare.py  prepare_compressed.py
runners/embedded/ld/: cortex-m-rt_0.6.15_link.x  lpc55-memory-template.x
runners/embedded/librunner/: Cargo.toml
runners/embedded/librunner/src/: lib.rs  types.rs
runners/embedded/librunner/src/soc_nrf52840/: mod.rs  types.rs
runners/embedded/nrf-bootloader/: Dockerfile.flash
runners/embedded/nrf-bootloader/config/: nk_sdk_config.h
runners/embedded/profiles/: lpc55.toml  nrf52-bootloader.toml  nrf52.toml
runners/embedded/src/: board.rs  flash.rs  lib.rs  nk3xn.rs  runtime.rs  soc.rs  store.rs  types.rs  ui.rs
runners/embedded/src/board/: nk3am.rs  nk3xn.rs  nkpk.rs
runners/embedded/src/board/nk3am/: ui.rs
runners/embedded/src/board/nk3xn/: init.rs  prince.rs
runners/embedded/src/nk3xn/: init.rs
runners/embedded/src/soc/: nrf52840.rs
runners/embedded/src/soc/lpc55/: init.rs  mod.rs  monotonic.rs  trussed.rs  types.rs
runners/embedded/src/soc/nrf52840/: board_nk3am.rs  (+7 more)
runners/embedded/src/soc_lpc55/: clock_controller.rs  init.rs  mod.rs  monotonic.rs  nfc.rs  prince.rs  spi.rs  trussed.rs  types.rs
runners/embedded/src/soc_nrf52840/: board_nk3am.rs  board_nrfdk.rs  board_proto1.rs  board_proto2.rs  display_ui.rs  dummy_ui.rs  extflash.rs  flash.rs  fpr.rs  mod.rs  nfc.rs  qspiflash.rs  rtic_monotonic.rs  sub_board.rs  trussed.rs  trussed_ui.rs  types.rs
runners/embedded/src/traits/: buttons.rs  mod.rs  rgb_led.rs
runners/embedded/src/types/: usbnfc.rs
runners/embedded/src/ui/: buttons.rs
runners/lpc55/: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
runners/lpc55/board/: Cargo.toml
runners/lpc55/board/src/: lib.rs  nfc.rs  spi.rs  trussed.rs  ui.rs
runners/lpc55/config/: commands.bd
runners/lpc55/debug/: print_msp.gdb  print_msp.py
runners/lpc55/src/: initializer.rs  lib.rs  main.rs  types.rs
runners/lpc55/src/initializer/: stages.rs
runners/lpc55/src/types/: usb.rs
runners/nkpk/: .gitignore  Cargo.toml  Makefile  build.rs
runners/nkpk/.cargo/: config
runners/nkpk/src/: main.rs
runners/nkso3/: Cargo.toml  Makefile  README.md  build.rs  memory.x  run.gdb
runners/nkso3/.cargo/: config.toml
runners/nkso3/src/: gpio.rs  main.rs  nucleo.rs  timer.rs
runners/nrf52840/: .gitignore  Cargo.toml  DEVME.md  Makefile  README.md  blank_lfs_e0000+20000.ihex  bootloader.hex  deny.toml  ext_flash.txt  fidokeys_lfs_e0000+20000.ihex  gdb.cmds  memory.x  ocdtool.py  syms.py  trussed_logo.img.rle
runners/nrf52840/.cargo/: config
runners/nrf52840/bootloader/: Dockerfile  Makefile
runners/nrf52840/bootloader/config/: sdk_config.h
runners/nrf52840/bootloader/signing-key/: dfu_private.key
runners/nrf52840/data/: prepare.py
runners/nrf52840/deployment/: Makefile  gen_init_fs.c  list_fs.c
runners/nrf52840/src/: _fpr_main_rs  board_nk3mini.rs  board_nrfdk.rs  board_proto1.rs  extflash.rs  flash.rs  fpr.rs  main.rs  se050.rs  types.rs  ui.rs  usb.rs
runners/usbip/: .gitignore  Cargo.toml  Makefile  build.rs  delayed-attach.sh  walk.sh
runners/usbip/src/: main.rs  store.rs  ui.rs
utils/collect-license-info/: Cargo.toml
utils/collect-license-info/src/: main.rs
utils/collect-license-info/templates/: license.txt
(+227 files in other folders)
