[workspace]
members = [
    "components/*",
    "runners/embedded",
    "runners/nkpk",
    "runners/usbip",
    "utils/collect-license-info",
    "utils/gen-commands-bd",
]
resolver = "2"

[workspace.package]
version = "1.9.0-rc.1"

[workspace.dependencies]
littlefs2 = "0.7"
trussed = { version = "=0.2.0-rc.1", default-features = false }
trussed-core = "0.2"

[patch.crates-io]
# components
memory-regions = { path = "components/memory-regions" }

# unreleased libraries
p256-cortex-m4  = { git = "https://github.com/ycrypto/p256-cortex-m4.git", rev = "cdb31e12594b4dc1f045b860a885fdc94d96aee2" }
trussed = { git = "https://github.com/trussed-dev/trussed.git", branch = "release-v0.2.0-rc.1" }
trussed-usbip = { git = "https://github.com/trussed-dev/pc-usbip-runner.git", branch = "trussed-v0.2.0-rc.1" }

# applications
admin-app = { git = "https://github.com/Nitrokey/admin-app.git", branch = "trussed-v0.2.0-rc.1" }
opcard = { git = "https://github.com/Nitrokey/opcard-rs", tag = "v1.7.0" }
piv-authenticator = { git = "https://github.com/trussed-dev/piv-authenticator.git", tag = "v0.6.0" }
secrets-app = { git = "https://github.com/Nitrokey/trussed-secrets-app", tag = "v0.15.0" }

# backends
trussed-auth-backend = { git = "https://github.com/trussed-dev/trussed-auth", branch = "trussed-v0.2.0-rc.1" }
trussed-rsa-alloc = { git = "https://github.com/trussed-dev/trussed-rsa-backend.git", branch = "trussed-v0.2.0-rc.1" }
trussed-se050-backend = { git = "https://github.com/Nitrokey/trussed-se050-backend.git", branch = "trussed-v0.2.0-rc.1" }
trussed-staging = { git = "https://github.com/trussed-dev/trussed-staging.git", branch = "trussed-v0.2.0-rc.1" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
incremental = false
debug = true

[profile.release-thin-lto]
lto = "thin"
inherits = "release"

[profile.release.package.salty]
opt-level = 2

[profile.release-thin-lto.package.salty]
opt-level = 2
