[workspace]
members = [
    "components/*",
    "runners/embedded",
    "runners/nkpk",
    "runners/usbip",
    "utils/collect-license-info",
    "utils/gen-commands-bd",
]
resolver = "2"

[workspace.package]
version = "1.9.0-rc.1"

[workspace.dependencies]
littlefs2 = "0.8"
trussed = { version = "0.2", default-features = false }
trussed-core = "0.2"

[patch.crates-io]
# components
memory-regions = { path = "components/memory-regions" }

# unreleased libraries
p256-cortex-m4  = { git = "https://github.com/ycrypto/p256-cortex-m4.git", rev = "cdb31e12594b4dc1f045b860a885fdc94d96aee2" }

# applications
opcard = { git = "https://github.com/Nitrokey/opcard-rs", tag = "v1.8.0" }
piv-authenticator = { git = "https://github.com/trussed-dev/piv-authenticator.git", tag = "v0.6.0" }
secrets-app = { git = "https://github.com/Nitrokey/trussed-secrets-app", tag = "v0.15.0" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
incremental = false
debug = true

[profile.release-thin-lto]
lto = "thin"
inherits = "release"

[profile.release.package.salty]
opt-level = 2

[profile.release-thin-lto.package.salty]
opt-level = 2
