[package]
name = "apps"
version = { workspace = true }
edition = "2021"

[dependencies]
apdu-dispatch = "0.1"
bitflags = "2"
ctaphid-dispatch = "0.1"
heapless = "0.7"
serde = { version = "1.0.180", default-features = false }
trussed = { version = "0.1", features = ["serde-extensions"]}
trussed-usbip = { version = "0.0.1", default-features = false, features = ["ctaphid"], optional = true }
usbd-ctaphid = { version = "0.1", optional = true }
utils = { path = "../utils" }
if_chain = "1.0.2"
littlefs2 = "0.4"

# Backends
trussed-auth = { version = "0.2.2", optional = true }
trussed-hkdf = { version = "0.1.0" }
trussed-rsa-alloc = { version = "0.1.0", optional = true }
trussed-staging = { version = "0.1.0", features = ["wrap-key-to-file", "chunked", "encrypted-chunked", "manage"] }

# apps
admin-app = "0.1.0"
fido-authenticator = { version = "0.1.1", features = ["chunked", "dispatch"], optional = true }
ndef-app = { path = "../ndef-app", optional = true }
webcrypt = { version = "0.8.0", optional = true }
secrets-app = { version = "0.13.0", features = ["apdu-dispatch", "ctaphid"], optional = true }
opcard = { version = "1.1.1", features = ["apdu-dispatch", "delog", "rsa2048-gen", "rsa4096", "admin-app"], optional = true }
piv-authenticator = { version = "0.3.1", features = ["apdu-dispatch", "delog", "rsa"], optional = true }
provisioner-app = { path = "../provisioner-app", optional = true }
se05x = { version = "0.1.1", optional = true}
trussed-se050-backend = { version = "0.2.0", optional = true }
embedded-hal = "0.2.7"

[dev-dependencies]
cbor-smol = "0.4"
hex = "0.4"

[features]
# client count = n + 1, where n is the number of activated optional
# applications except ndef-app:
# - admin-app is always enabled (+1)
# - ndef-app does not require a Trussed client (0)
# - all other optional apps require a Trussed client (+n)

# nk3
nk3 = ["fido-authenticator", "ndef-app", "secrets-app", "opcard", "trussed/clients-4"]
nk3-test = ["nk3", "piv-authenticator", "webcrypt", "factory-reset", "trussed/clients-6"]
nk3-provisioner = ["nk3", "provisioner-app", "trussed/clients-5"]

# nkpk
nkpk = ["fido-authenticator", "trussed/clients-2"]
nkpk-provisioner = ["nkpk", "provisioner-app", "trussed/clients-3"]

# apps
secrets-app = ["dep:secrets-app", "backend-auth"]
backend-webcrypt-hmacsha256p256 = []
webcrypt = ["dep:webcrypt", "backend-auth", "backend-rsa", "backend-webcrypt-hmacsha256p256"]
fido-authenticator = ["dep:fido-authenticator", "usbd-ctaphid"]
opcard = ["dep:opcard", "backend-rsa", "backend-auth"]
piv-authenticator = ["dep:piv-authenticator", "backend-rsa", "backend-auth"]
se050 = ["dep:se05x", "trussed-se050-backend", "admin-app/se050"]

# backends
backend-auth = ["trussed-auth"]
backend-rsa = ["trussed-rsa-alloc"]

log-all = ["admin-app/log-all", "fido-authenticator?/log-all", "secrets-app?/log-all", "webcrypt?/log-all", "opcard?/log-all", "provisioner-app?/log-all"]

trussed-usbip-ccid = ["trussed-usbip/ccid"]

factory-reset = ["admin-app/factory-reset"]

# Allow resetting FIDO authenticator (and possibly others) even after 10s uptime
no-reset-time-window = ["fido-authenticator?/disable-reset-time-window"]
