[package]
name = "apps"
version = { workspace = true }
edition = "2021"

[dependencies]
delog = "0.1"
apdu-app = "0.1"
bitflags = "2"
ctaphid-app = "0.1"
embedded-hal = "0.2.7"
heapless = "0.9"
heapless-bytes = "0.5"
interchange = "0.3"
se05x = { version = "0.2.0", optional = true}
serde = { version = "1.0.180", default-features = false }
trussed = { version = "0.1", default-features = false, features = ["serde-extensions", "filesystem-client", "ui-client", "all-clients", "shared-secret"] }
trussed-core = "0.1.0-rc.1"
trussed-usbip = { version = "0.0.1", default-features = false, features = ["ctaphid"], optional = true }
usbd-ctaphid = { version = "0.3", optional = true }
utils = { path = "../utils" }
if_chain = "1.0.2"
littlefs2-core = "0.1"

# Backends
trussed-auth-backend = { version = "0.1.0", optional = true }
trussed-rsa-alloc = { version = "0.3.0", optional = true }
trussed-se050-backend = { version = "0.5.0", optional = true }
trussed-staging = { version = "0.3.2", features = ["wrap-key-to-file", "chunked", "hkdf", "manage", "fs-info"] }

# Extensions
trussed-auth = { version = "0.4", optional = true }
trussed-chunked = "0.2.0"
trussed-hkdf = "0.3.0"
trussed-manage = "0.2.0"
trussed-se050-manage = { version = "0.2.0", optional = true }
trussed-wrap-key-to-file = "0.2.0"
trussed-fs-info = "0.2.0"
trussed-hpke = "0.2.0"

# apps
admin-app = "0.1.0"
fido-authenticator = { version = "0.1.1", features = ["chunked", "dispatch"], optional = true }
ndef-app = { path = "../ndef-app", optional = true }
secrets-app = { version = "0.14.0", features = ["apdu-dispatch", "ctaphid"], optional = true }
opcard = { version = "1.6.1", features = ["apdu-dispatch", "delog", "rsa2048-gen", "rsa4096", "admin-app"], optional = true }
piv-authenticator = { version = "0.5.2", features = ["apdu-dispatch", "delog", "rsa"], optional = true }
provisioner-app = { path = "../provisioner-app", optional = true }

[dev-dependencies]
cbor-smol = "0.5"
hex = "0.4"

[features]
# nk3
nk3 = ["fido-authenticator", "ndef-app", "secrets-app", "opcard", "piv-authenticator", "factory-reset"]
nk3-test = ["nk3"]
nk3-provisioner = ["nk3", "provisioner-app"]

# nkpk
nkpk = ["fido-authenticator", "factory-reset"]
nkpk-provisioner = ["nkpk", "provisioner-app"]

# apps
secrets-app = ["dep:secrets-app", "backend-auth", "trussed/chacha8-poly1305", "trussed/hmac-sha1", "trussed/hmac-sha256", "trussed/sha256"]
fido-authenticator = ["dep:fido-authenticator", "usbd-ctaphid", "trussed/aes256-cbc", "trussed/chacha8-poly1305", "trussed/ed255", "trussed/hmac-sha256", "trussed/p256", "trussed/sha256"]
opcard = ["dep:opcard", "backend-rsa", "backend-auth", "trussed/aes256-cbc", "trussed/chacha8-poly1305", "trussed/ed255", "trussed/p256", "trussed/x255"]
piv-authenticator = ["dep:piv-authenticator", "backend-rsa", "backend-auth", "trussed/aes256-cbc", "trussed/chacha8-poly1305", "trussed/ed255", "trussed/p256", "trussed/tdes", "trussed/x255"]
se050 = ["dep:se05x", "trussed-se050-backend", "trussed-se050-manage", "admin-app/se050"]

# backends
backend-auth = ["trussed-auth", "trussed-auth-backend"]
backend-rsa = ["trussed-rsa-alloc"]
backend-software-hpke = ["trussed-staging/hpke"]

log-all = ["admin-app/log-all", "fido-authenticator?/log-all", "secrets-app?/log-all", "opcard?/log-all", "provisioner-app?/log-all", "piv-authenticator?/log-all", "trussed-se050-backend?/log-all"]
log-error = []
log-warn = []
log-info = []
log-debug = []
log-trace = []
log-none = []

trussed-usbip-ccid = ["trussed-usbip/ccid", "backend-software-hpke"]

factory-reset = ["admin-app/factory-reset"]

# Allow resetting FIDO authenticator (and possibly others) even after 10s uptime
no-reset-time-window = ["fido-authenticator?/disable-reset-time-window"]
