[package]
name = "fm11nt08c"
edition = "2024"
version = "0.1.0"


[dependencies]
delog = "0.1.0"
embedded-time = "0.12"
nb = "1"
nfc-device = {path = "../nfc-device"}
embedded-hal = { version = "0.2.7", features = ["unproven"] }
bitfield = "0.19.3"

[features]
default = ["log-all"]

log-all = []
log-none = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
log-error = []
