[package]
name = "fm11nt08c"
edition = "2024"
version = "0.1.0"


[dependencies]
delog = "0.1.0"
embedded-time = "0.12"
nb = "1"
nfc-device = {path = "../nfc-device"}
embedded-hal = { version = "0.2.7", features = ["unproven"] }
bitfield = "0.19.3"
lpc55-hal = { version = "0.3.0", optional = true }
lpc55-hal-04 = { package = "lpc55-hal", version = "0.4.0", optional = true }

[features]
default = ["log-all"]

log-all = []
log-none = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
log-error = []

"lpc55-v0.3" = ["dep:lpc55-hal"]
"lpc55-v0.4" = ["dep:lpc55-hal-04"]
