[package]
name = "lfs-backup"
version = "0.1.0"
edition = "2021"


[dependencies]

littlefs2 = "0.3.2"
generic-array = "0.14.6"

heapless-bytes = "0.3.0"
heapless = "0.7.16"

serde = { version = "1.0", default-features = false }
postcard = "1.0"

trussed = "0.1"

[dev-dependencies]
rand = "0.8.5"
serial_test = "1.0"