[package]
name = "lfs-backup"
version = "0.1.0"
edition = "2021"


[dependencies]
littlefs2.workspace = true
generic-array = "0.14.6"

heapless-bytes = "0.5.0"
heapless = "0.9.1"

serde = { version = "1.0", default-features = false }
postcard = "1.0"

trussed = { version = "0.1", default-features = false }
trussed-core = "0.1.0"

[dev-dependencies]
rand = "0.8.5"
serial_test = "1.0"
