[package]
name = "ndef-app"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"

apdu-app = "0.1"
iso7816 = "0.1"
delog = "0.1"

[features]
default = ["log-all"]
log-all = []
log-debug = []
