[package]
name = "nfc-device"
version = "0.0.1"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
delog = "0.1.0"
embedded-time = "0.12"
heapless = "0.9"
nb = "1"

apdu-dispatch = "0.3"
iso7816 = "0.2"
interchange = "0.3.0"

[features]
default = []

log-all = []
log-none = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
log-error = []
