[package]
name = "nt3h2111"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
delog = "0.1"
embedded-time = "0.12.1"
nb = "1.1.0"
bitfield = "0.17.0"
array-tuple-concat = { path = "../array-tuple-concat" }
nfc-device = { path = "../nfc-device" }
bitflags = "2.8.0"

[dev-dependencies]
proptest = "1.6"

[features]
default = ["log-all"]
log-none = []
log-all = []
log-trace = []
log-info = []
log-debug = []
log-warn = []
log-error = []
