[package]
name = "ntp53"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
delog = "0.1"
bitflags = { version = "2.4.2", default-features = false}

[features]
default = ["log-all"]

log-all = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
log-error = []
log-none = []
