[package]
name = "ntp53"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
delog = "0.1"
bitfield = { git = "https://github.com/sosthene-nitrokey/rust-bitfield.git", rev = "e22a096dd22eac3abbfc37f92423b8bdf0985bba" }
embedded-time = "0.12.1"
nb = "1.1.0"
nfc-device = {path = "../nfc-device"}

[features]
default = ["log-all"]

log-all = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
log-error = []
log-none = []
