[package]
name = "provisioner-app"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = "0.1"
ctaphid-dispatch = "0.1"
delog = "0.1"
heapless = "0.7"
heapless-bytes = "0.3"
littlefs2 = "0.4.0"
salty = { version = "0.3", features = ["cose"] }
trussed = "0.1"
p256-cortex-m4 = "0.1.0-alpha.6"


[features]
log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
