[package]
name = "se050-backend-random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iso7816 = "0.1.1"
se050 = "0.0.1"
apdu-dispatch = "0.1"
hex-literal = "0.4.1"
heapless = "0.7.16"
delog = "0.1.6"
embedded-hal = "0.2.7"
trussed = { version = "0.1", features = ["serde-extensions"]}


[features]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
