[package]
name = "stm32n657-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
fugit = "0.3"
nb = "0.1"
stm32n6 = { version = "0.16", default-features = false, features = ["stm32n657"] }
synopsys-usb-otg = { version = "0.3", optional = true, features = ["cortex-m"] }

[features]
default = ["otg-fs"]

otg-fs = ["synopsys-usb-otg/fs"]
