[package]
name = "usbd-ctaphid"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
license-file = "LICENSE.md"
edition = "2018"

[dependencies]
cortex-m-funnel = { version = "0.1.0-alpha.1", optional = true }
cortex-m-semihosting = "0.3.5"
ctapcbor = { git = "https://github.com/nickray/ctapcbor", branch = "main" }
heapless = { version = "0.5.1", default-features = false, features = ["serde"] }
heapless-bytes = { git = "https://github.com/ycrypto/heapless-bytes", branch = "main", features = ["cbor"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.0", default-features = false }
serde-indexed = { git = "https://github.com/ycrypto/serde-indexed", branch = "main" }
serde_repr = "0.1"
ufmt = { version = "0.1.0", optional = true}
usb-device = "0.2.3"

# crypto
cosey = { git = "https://github.com/ycrypto/cosey", branch = "main" }
derpy = { git = "https://github.com/ycrypto/derpy", branch = "main", optional = true }
nisty = { git = "https://github.com/ycrypto/nisty", branch = "main", default-features = false, features = ["asn1-der", "cose"], optional = true }
salty = { git = "https://github.com/ycrypto/salty", branch = "main", features = ["cose"], optional = true }
sha2 = { version = "0.8.0", default-features = false, optional = true }

# components

[features]
logging = ["cortex-m-funnel", "ufmt"]
insecure-ram-authenticator = ["derpy", "nisty", "salty/haase", "sha2"]

# issue: this dependency of bindgen triggers non-`no_std`...
# [patch.crates-io]
# rustc-hash = { git = "https://github.com/nickray/rustc-hash", branch = "nickray-remove-byteorder" }
# [patch.crates-io]
# serde_derive = { path = "../serde/serde_derive" }
# [patch."https://github.com/ycrypto/serde-indexed"]
# serde-indexed = { path = "../../../serde-indexed" }
