[package]
name = "utils"
version = { workspace = true }
edition = "2021"

[dependencies]
delog = "0.1"
littlefs2 = { version = "0.4", optional = true }

[build-dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
regex = { version = "1.10.2", default-features = false }
semver = "1.0.20"

[dev-dependencies]
quickcheck = "1.0.3"

[features]
default = ["storage"]

storage = ["littlefs2"]
test = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
